# furniture_mover

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  furniture_mover.ini  furniture_mover_filter.TEMPLATE.json  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
furniture_mover/: __main__.py  config.py  couch.py  furniture_mover.py
tests/functinal_tests/: conftest.py  test_functionality.py
tests/functional_tests/: test_functionality.py
