[tool.poetry]
name = "furniture_mover"
version = "0.1.0"
description = ""
authors = ["mindcrackx <m.plaumann@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.0"}
requests = "^2.24.0"
requests_toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.782"
flake8 = "^3.8.3"
flake8-black = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
